moving data processing logic to the server. Taking advantage of Socket.io

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.4",
+    "promise": "^7.1.1",
     "serialport": "^2.1.0",
     "three": "^0.75.0"
   }
